# iscool-core

./: .dir-locals.el  README.md
.github/workflows/: build-test.yml  sanitizers.yml
apps/style-merger/src/: main.cpp
build-scripts/: android.sh  ios.sh
build-scripts/cmake/: CMakeLists.txt
build-scripts/cmake/apps/style-merger/: CMakeLists.txt
build-scripts/cmake/cmake-modules/: DownloadProject.cmake  boost-android.cmake  boost-ios.cmake  boost.cmake  build-gettext-translations.cmake  declare-iscool-library-test.cmake  declare-iscool-library.cmake  google-test.cmake  install-dependency.cmake  install.cmake  iscool-repository.cmake  jsoncpp.cmake  mo-file-reader.cmake  platform.cmake  prepend-string.cmake  unity-build.cmake
build-scripts/cmake/cmake-modules/DownloadProject/: DownloadProject.CMakeLists.cmake.in
build-scripts/cmake/modules/any/: CMakeLists.txt
build-scripts/cmake/modules/audio/: CMakeLists.txt
build-scripts/cmake/modules/collections/: CMakeLists.txt
build-scripts/cmake/modules/containers/: CMakeLists.txt
build-scripts/cmake/modules/contract/: CMakeLists.txt
build-scripts/cmake/modules/core/: CMakeLists.txt
build-scripts/cmake/modules/error/: CMakeLists.txt
build-scripts/cmake/modules/factory/: CMakeLists.txt
build-scripts/cmake/modules/files/: CMakeLists.txt
build-scripts/cmake/modules/functional/: CMakeLists.txt
build-scripts/cmake/modules/http/: CMakeLists.txt
build-scripts/cmake/modules/i18n/: CMakeLists.txt
build-scripts/cmake/modules/ios/: CMakeLists.txt
build-scripts/cmake/modules/iterators/: CMakeLists.txt
build-scripts/cmake/modules/jni/: CMakeLists.txt
build-scripts/cmake/modules/json/: CMakeLists.txt
build-scripts/cmake/modules/locale/: CMakeLists.txt
build-scripts/cmake/modules/log/: CMakeLists.txt
build-scripts/cmake/modules/memory/: CMakeLists.txt
build-scripts/cmake/modules/meta/: CMakeLists.txt
build-scripts/cmake/modules/monitoring/: CMakeLists.txt
build-scripts/cmake/modules/net/: CMakeLists.txt
build-scripts/cmake/modules/notification/: CMakeLists.txt
build-scripts/cmake/modules/preferences/: CMakeLists.txt
build-scripts/cmake/modules/profile/: CMakeLists.txt
build-scripts/cmake/modules/random/: CMakeLists.txt
build-scripts/cmake/modules/resources/: CMakeLists.txt
build-scripts/cmake/modules/schedule/: CMakeLists.txt
build-scripts/cmake/modules/signals/: CMakeLists.txt
build-scripts/cmake/modules/social/: CMakeLists.txt
build-scripts/cmake/modules/strings/: CMakeLists.txt
build-scripts/cmake/modules/style/: CMakeLists.txt
build-scripts/cmake/modules/system/: CMakeLists.txt
build-scripts/cmake/modules/time/: CMakeLists.txt
build-scripts/cmake/modules/video/: CMakeLists.txt
build-scripts/cmake/modules/wish/: CMakeLists.txt
build-scripts/cmake/package/: CMakeLists.txt  iscool-core-config.cmake.in
build-scripts/cmake/testing/test/: CMakeLists.txt
modules/core/any/module/include/iscool/any/: any.h  any.impl.tpp  declare_visitor_interface.h  implement_visitor_interface.h  implement_visitor_interface.hpp
modules/core/any/module/src/iscool/any/: any.cpp
modules/core/any/tests/src/iscool/any/: any.cpp
modules/core/audio/module/include/iscool/audio/: default_effect_player.h  default_effect_player.hpp  default_mixer.h  loop_mode.h  loop_mode.hpp  mixer.h  mixer.hpp  platform_mixer.h  platform_mixer.hpp  track_id.h  track_id.hpp
modules/core/audio/module/src/iscool/audio/: default_effect_player.cpp  default_mixer.cpp  mixer.cpp
modules/core/audio/tests/src/iscool/audio/: default_effect_player.cpp  mixer.cpp
modules/core/collections/module/include/iscool/collections/: append.h  append.hpp  apply_permutation.h  apply_permutation.hpp  binary_search.h  binary_search.hpp  has_duplicates.h  has_duplicates.hpp  insert_all.h  insert_all.hpp  insert_or_assign_all.h  insert_or_assign_all.hpp  make_array.h  make_array.hpp  member_view.h  member_view.hpp  rank.h  rank.hpp  sort_permutation.h  sort_permutation.hpp
modules/core/collections/tests/src/iscool/collections/: append.cpp  apply_permutation.cpp  binary_search.cpp  has_duplicates.cpp  insert_all.cpp  insert_or_assign_all.cpp  make_array.cpp  member_view.cpp  rank.cpp  sort_permutation.cpp
modules/core/containers/module/include/iscool/containers/: heterogeneous_map.h  heterogeneous_map.hpp  heterogeneous_map.impl.tpp
modules/core/containers/tests/src/iscool/containers/: heterogeneous_map.cpp
modules/core/contract/module/include/iscool/contract/: verify.h  verify_not_null.h  verify_not_null.hpp
modules/core/contract/tests/src/iscool/contract/: verify.cpp  verify_not_null.cpp
modules/core/core/module/include/iscool/: context.h  context.hpp  copy.h  copy.hpp  digits.h  enum_equals.h  enum_equals.hpp  enum_equals.tpp  iso_639_language_code.hpp  iso_639_language_code_fwd.hpp  language_name.hpp  language_name_fwd.hpp  none.h  none.hpp  none_t.hpp  optional.h  optional.hpp  optional.impl.tpp  optional_or_else.h  optional_or_else.hpp
modules/core/core/module/include/iscool/detail/: copy.tpp  optional_or_else.tpp
modules/core/core/module/src/iscool/: digits.cpp  iso_639_language_code.cpp  language_name.cpp  none.cpp  optional.cpp
modules/core/core/tests/src/iscool/: context.cpp  copy.cpp  digits.cpp  enum_equals.cpp  optional.cpp  optional_or_else.cpp
modules/core/error/module/include/iscool/error/: synopsis.h  synopsis.hpp
modules/core/error/module/src/iscool/error/: optional.cpp  synopsis.cpp
modules/core/error/tests/src/iscool/error/: synopsis.cpp
modules/core/factory/module/include/iscool/factory/: dynamic_factory.h  dynamic_factory.hpp  dynamic_factory.impl.tpp  dynamic_factory_registrar.h  dynamic_factory_registrar.hpp  factory_function.h  factory_function.hpp
modules/core/jni/android/java/: AndroidManifest.xml
modules/core/json/android/java/: AndroidManifest.xml
modules/core/log/android/java/: AndroidManifest.xml
modules/core/notification/java/: AndroidManifest.xml
modules/core/social/java/: AndroidManifest.xml
modules/core/system/android/java/: AndroidManifest.xml
(+1457 files in other folders)
