cmake_minimum_required( VERSION 3.1 )

set( source_root "${CMAKE_CURRENT_SOURCE_DIR}/../.." )
set( link_mode "STATIC" )
set( required_boost_version 1.58.0 )
set( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules" )
set( CMAKE_CXX_STANDARD 11 )

if( CMAKE_SYSTEM_NAME STREQUAL "Android" )
  include( boost-android )
elseif( CMAKE_SYSTEM_NAME STREQUAL "Darwin" )
  include( boost-ios )
else()
  set( ISCOOL_TEST_ENABLED 1 )
endif()

if( ISCOOL_TEST_ENABLED )
  include( google-test )
endif()

add_subdirectory( "testing/test" )

add_subdirectory( "modules/core" )
add_subdirectory( "modules/meta" )

add_subdirectory( "modules/collections" )
add_subdirectory( "modules/containers" )
add_subdirectory( "modules/contract" )
add_subdirectory( "modules/functional" )
add_subdirectory( "modules/locale" )
add_subdirectory( "modules/memory" )
add_subdirectory( "modules/any" )
add_subdirectory( "modules/strings" )
add_subdirectory( "modules/error" )
add_subdirectory( "modules/log" )
add_subdirectory( "modules/files" )
add_subdirectory( "modules/iterators" )
add_subdirectory( "modules/time" )
add_subdirectory( "modules/profile" )
add_subdirectory( "modules/json" )
add_subdirectory( "modules/random" )
add_subdirectory( "modules/signals" )
add_subdirectory( "modules/monitoring" )
add_subdirectory( "modules/schedule" )
add_subdirectory( "modules/http" )
add_subdirectory( "modules/i18n" )
add_subdirectory( "modules/preferences" )
add_subdirectory( "modules/resources" )
add_subdirectory( "modules/audio" )
add_subdirectory( "modules/net" )
add_subdirectory( "modules/wish" )
add_subdirectory( "modules/style" )
add_subdirectory( "modules/factory" )

if( CMAKE_SYSTEM_NAME STREQUAL "Android" )
  add_subdirectory( "modules/jni" )
endif()

add_subdirectory( "modules/notification" )
add_subdirectory( "modules/social" )
add_subdirectory( "modules/system" )
